--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,6 @@
 	<title>Brians Website</title>
 </head>
 <body>
-This is Brian's Website
+This is Brian's Website where you can learn all types of fun facts about everything
 </body>
 </html>
