--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,18 @@
 	<title>Brians Website</title>
 </head>
 <body>
-This is Brian's Website where you can learn all types of fun facts about everything
+
+<h1>This is Brian's Website where you can learn all types of fun facts about everything</h1>
+
+<h2>Fun FAR Facts</h2>
+
+<h2>Home Improvement Facts</h2>
+
+<h2>Dog Facts</h2>
+
+<img> https://www.bing.com/images/search?view=detailV2&ccid=nMrS7qXJ&id=7D0B88D3632B7B4C7511001D603D982531E93C7F&thid=OIP.nMrS7qXJFW0zzKAfAi8jKQHaE8&mediaurl=https%3a%2f%2fmymodernmet.com%2fwp%2fwp-content%2fuploads%2f2019%2f11%2fdogs-are-the-best-people-frog-dog-studios-17.jpg&exph=800&expw=1200&q=dogs&simid=608000815055832047&ck=5CD8C46223365F18A11ED8D7A657A013&selectedIndex=14&FORM=IRPRST
+
+<h2>Massachusetts Facts</h2>
+
 </body>
 </html>
