--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,19 @@
 </head>
 <body>
 
-<h1>This is Brian's Website where you can learn all types of fun facts about everything</h1>
+<h1>This is Brian's fun facts Website</h1>
 
 <h2>Fun FAR Facts</h2>
 
+
 <h2>Home Improvement Facts</h2>
+
 
 <h2>Dog Facts</h2>
 
+
 <h2>Massachusetts Facts</h2>
+
 
 </body>
 
