--- a/Index.html
+++ b/Index.html
@@ -9,14 +9,31 @@
 
 <h2>Fun FAR Facts</h2>
 
+<ul>
+	<li>The FAR is not fun</li>
+
+</ul>
+
 
 <h2>Home Improvement Facts</h2>
 
+<ul>
+	<li>countertops</li>
+	<li>flooring</li>
+
+</ul>
 
 <h2>Dog Facts</h2>
 
 
 <h2>Massachusetts Facts</h2>
+
+<ul>
+	<li>Boston is the Capital</li>
+	<li>Population 7 Million</li>
+	<li>Nickname is The Bay State</li>
+
+</ul>
 
 
 </body>
